# mc_trading_system_public

./: .clang-format  .dockerignore  .env_example  .gitattributes  .gitignore  README.md  capital.http  deploy.sh  docker-compose.production.yml  docker-compose.yml  mc-monitor.service  monitor_docker.ps1  package.json  remote_deploy.sh.template  requirements.txt
.github/workflows/: build-base-image.yml  deploy-monitor-shell-script.yml  deploy.yml  docker-build.yml
api_server/: ApiServer.csproj  Dockerfile  Program.cs
api_server/BackgroundTasks/: AccountSyncTask.cs  HistoricalDataSeeder.cs  MarketDataStreamer.cs  MarketDataSyncTask.cs  RiskEnforcementTask.cs
api_server/Config/: local.json  prod.json
api_server/Context/: TradingDbContext.cs
api_server/Controllers/: MarketController.cs  RiskController.cs  SystemController.cs  TradeController.cs
api_server/Core/: BaseBackgroundService.cs  DatabaseSetup.cs  DbConnectionHelper.cs  RedisClient.cs
api_server/Hubs/: HubEvents.cs  MarketHub.cs  TradeHub.cs
api_server/Models/: Entities.cs  SystemModels.cs
api_server/Properties/: launchSettings.json
api_server/Repositories/: MarketCandleRepository.cs  TradeRepository.cs
api_server/Services/: CapitalService.cs  DbService.cs  MarketDataService.cs  RiskService.cs  SystemService.cs  TradeService.cs
api_server/tests/: ApiServer.Tests.csproj
auth_manager/: Dockerfile  config.py  session_manager.py
backtest_engine/: __init__.py  package.json  run.py
backtest_engine/actions/: audit_action.py  backtest_action.py  base.py  optimize_action.py  wfo_action.py
backtest_engine/analysis/: monte_carlo.py  walk_forward.py
backtest_engine/core/: __init__.py  dtos.py  engine.py  metrics.py  ml_handler.py
backtest_engine/utils/: data_adapters.py  report_components.py  tv_chart.py
core_lib/: CMakeLists.txt  vcpkg.json
core_lib/bindings/: py_strategies.cpp
core_lib/include/: Bar.hpp  BatchUtils.hpp  IStrategy.hpp  Position.hpp  Signal.hpp  StrategyFactory.hpp
core_lib/strategies/: MACD.cpp  MACD.hpp  PineL4.cpp  PineL4.hpp  YuBrokenBottom.cpp  YuBrokenBottom.hpp
data/seed/: BTCUSD__DAY__20200101T0000_20260406T0000.parquet  (+29 more)
documents/: Audit_PineL4_US100_20260101_20260314.html
frontend/: .env.production  Dockerfile  index.html  openapi.json  package.json  vite.config.ts
frontend/src/: App.css  (+6 more)
infra/: .terraform.lock.hcl  cloudflare.tf  ec2.tf  ecr.tf  iam.tf  outputs.tf  providers.tf  security_groups.tf  ssm.tf  terraform.tfvars.example  variables.tf
machine_learning/: collect_data.py  model_registry.json  promote_model.py  train_model.py
market_data_streamer/: CMakeLists.txt  Dockerfile  vcpkg.json
market_data_streamer/include/: AppConfig.hpp  CapitalWsClient.hpp  RedisService.hpp  WebSocketSession.hpp  ZmqService.hpp
market_data_streamer/src/: AppConfig.cpp  CapitalWsClient.cpp  RedisService.cpp  WebSocketSession.cpp  ZmqService.cpp  main.cpp
trade_manager/: Dockerfile  capital_client.py  models.py  order_executor.py  trade_repository.py  trade_service.py
trading_engine/: CMakeLists.txt  Dockerfile  vcpkg.json
trading_engine/include/: ConfigManager.hpp  EngineConstants.hpp  EngineCore.hpp  HistoryPreloader.hpp  MarketDataParser.hpp  RedisKeys.hpp  StrategyInstance.hpp
trading_engine/src/: ConfigManager.cpp  EngineCore.cpp  HistoryPreloader.cpp  MarketDataParser.cpp  main.cpp
(+70 files in other folders)
